--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ p{
     border-radius: 5px;
     font-family: 'Poppins', sans-serif;
 }
-section{
+.fexible-container{
     display: flex; 
 }
 .half-width{
@@ -45,4 +45,8 @@ section{
 }
 .Dream{
     margin-top: 10%;
+}
+.developer{
+    width: 100%;
+
 }
