--- a/style.css
+++ b/style.css
@@ -46,7 +46,14 @@ p{
 .Dream{
     margin-top: 10%;
 }
-.developer{
-    width: 100%;
 
+#experience{
+    margin-left: 3%;
+}
+.experience-item{
+    box-shadow: 10px 10px 40px gray;
+    border-radius: 5px;
+    margin-left: 5px;
+    margin-right: 5px;
+    width: 40%;
 }
