--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ p{
 }
 .fexible-container{
     display: flex; 
+    margin-bottom: 5%;
 }
 .half-width{
     width: 100%;
@@ -51,9 +52,28 @@ p{
     margin-left: 3%;
 }
 .experience-item{
-    box-shadow: 10px 10px 40px gray;
-    border-radius: 5px;
-    margin-left: 5px;
-    margin-right: 5px;
     width: 40%;
+    box-shadow: 10px 10px 40px gray;
+    border-radius: 10px;
+    margin-left: 3%;
+    margin-right: 3%;
+    padding-left: 2%;
+    padding-right: 2%;
+    padding-bottom: 2%;
+}
+#java-programmer{
+    border-left: 10px solid;
+    border-image: linear-gradient(blue, cyan);
+    border-image-slice: 1;
+}
+#android-developer{
+
+    border-right: 10px solid;
+    border-image: linear-gradient(blue,cyan);
+    border-image-slice: 1;
+}
+footer p{
+    text-align: center;
+    color: gray;
+    margin-bottom: 1%;
 }
